--- a/src/components/contact/MessageSection.astro
+++ b/src/components/contact/MessageSection.astro
@@ -5,7 +5,7 @@ import MessageImage from '@/assets/contact/message-image.png';
 ---
 
 <section class='bg-[#F4F5F0]'>
-  <div class='md:grid grid-cols-[600px_1fr] gap-10'>
+  <div class='md:grid grid-cols-[400px_1fr] xl:grid-cols-[600px_1fr] gap-10'>
     <Image
       src={MessageImage}
       alt={'message'}
