Add href to footer links

--- a/src/components/home/Footer.astro
+++ b/src/components/home/Footer.astro
@@ -43,22 +43,22 @@ const latestArticles = allArticles.slice(0, 3);
       <!-- <div class='flex flex-col items-center gap-6'></div> -->
       <div class='flex flex-col items-center lg:items-start gap-4 lg:gap-5'>
         <h3 class='font-gothamRounded text-2xl'>Quick Links</h3>
-        <a href='/' class='text-[--clr-white-02] hover:underline text-sm'
+        <a href='/about' class='text-[--clr-white-02] hover:underline text-sm'
           >About Us</a
         >
-        <a href='/' class='text-[--clr-white-02] hover:underline text-sm'
+        <a href='/shop' class='text-[--clr-white-02] hover:underline text-sm'
           >Products</a
         >
-        <a href='/' class='text-[--clr-white-02] hover:underline text-sm'
+        <a href='/blog' class='text-[--clr-white-02] hover:underline text-sm'
           >Press Releases</a
         >
         <a href='/' class='text-[--clr-white-02] hover:underline text-sm'
           >Media</a
         >
-        <a href='/' class='text-[--clr-white-02] hover:underline text-sm'
+        <a href='/checkout' class='text-[--clr-white-02] hover:underline text-sm'
           >Checkout</a
         >
-        <a href='/' class='text-[--clr-white-02] hover:underline text-sm'
+        <a href='/contact' class='text-[--clr-white-02] hover:underline text-sm'
           >Contact</a
         >
       </div>
