Remove unneeded code
This includes cleaning up unused imports and deleting files that are no longer needed. Typescript warnings are cleaned

--- a/src/components/home/NewsSection.astro
+++ b/src/components/home/NewsSection.astro
@@ -2,7 +2,7 @@
 import { Image } from 'astro:assets';
 import DateIcon from '../../assets/articles/post-check.png';
 import CommentIcon from '../../assets/articles/comment.png';
-import { getCollection, getEntry } from 'astro:content';
+import { getCollection } from 'astro:content';
 
 const allArticles = await getCollection('articles', ({ data }) => {
   return data.popular === true;
