--- a/src/components/home/Contact.astro
+++ b/src/components/home/Contact.astro
@@ -5,7 +5,7 @@ import { Button } from '../ui/button';
 ---
 
 <section
-  class='bg-[url("src/assets/home/bg-contact.jpg")] bg-no-repeat bg-cover bg-center text-[--clr-white-01]'
+  class='bg-[url("../assets/home/bg-contact.jpg")] bg-no-repeat bg-cover bg-center text-[--clr-white-01]'
 >
   <div
     class='py-20 px-4 text-center md:text-left flex flex-col md:flex-row gap-4 md:items-center md:justify-between max-w-[--max-width-content] mx-auto'
