--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -5,7 +5,7 @@ import { Image } from 'astro:assets';
 ---
 
 <section
-  class='bg-[url("src/assets/home/bg.jpg")] h-screen bg-no-repeat bg-cover bg-center relative'
+  class='bg-[url("../assets/home/bg.jpg")] h-screen bg-no-repeat bg-cover bg-center relative'
 >
   <Image src={Leaf} alt={''} class={'absolute top-32 lg:top-36'} loading={'eager'} />
   <div class='px-4 bg-black/50 h-screen flex items-center'>
