--- a/src/pages/blog/posts/[slug].astro
+++ b/src/pages/blog/posts/[slug].astro
@@ -1,12 +1,5 @@
 ---
-import { getCollection, getEntry } from 'astro:content';
-import OmniImg from 'src/assets/articles/article1.png';
-import EnvImg from 'src/assets/articles/article2.png';
-import StandardImg from 'src/assets/articles/article3.png';
-import PolicyImg from 'src/assets/articles/article7.png';
-import SpeechImg from 'src/assets/articles/article6.png';
-import PressImg from 'src/assets/articles/article4.png';
-import FarmersPressImg from 'src/assets/articles/article5.png';
+import { getCollection } from 'astro:content';
 import ArticleLayout from '@/layouts/ArticleLayout.astro';
 import DateIcon from '@/assets/articles/post-check.png';
 import CommentIcon from '@/assets/articles/comment.png';
@@ -31,34 +24,14 @@ export async function getStaticPaths() {
   });
 }
 
-const { slug } = Astro.params;
 const { title, date, author, image, alt, body } = Astro.props;
-
-function grabImage() {
-  switch (slug) {
-    case 'omnifarmers':
-      return { img: OmniImg, alt: 'omnifarmers image' };
-    case 'environment':
-      return { img: EnvImg, alt: 'Environment image' };
-    case 'standards':
-      return { img: StandardImg, alt: 'Standard Image' };
-    case 'agriculture_and_government_policy':
-      return { img: PolicyImg, alt: 'policy image' };
-    case 'press':
-      return { img: PressImg, alt: 'press image' };
-    case 'ceo-speech':
-      return { img: SpeechImg, alt: 'ceo speech image' };
-    case 'farmers_press':
-      return { img: FarmersPressImg, alt: 'farmers press image' };
-  }
-}
 ---
 
 <ArticleLayout pageTitle={title}>
   <article class='mt-32 md:flex flex-col items-center justify-center'>
     <Image
-      src={grabImage()?.img as ImageMetadata}
-      alt={grabImage()?.alt as string}
+      src={image}
+      alt={alt}
       class={'w-full md:max-w-[--max-width-article]'}
     />
     <div class='px-4 max-w-[--max-width-article] mx-auto'>
