--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -7,7 +7,12 @@ import { Image } from 'astro:assets';
 <section
   class='bg-[url("../assets/home/bg.jpg")] h-screen bg-no-repeat bg-cover bg-center relative'
 >
-  <Image src={Leaf} alt={''} class={'absolute top-32 lg:top-36'} loading={'eager'} />
+  <Image
+    src={Leaf}
+    alt={''}
+    class={'absolute top-32 lg:top-36'}
+    loading={'eager'}
+  />
   <div class='px-4 bg-black/50 h-screen flex items-center'>
     <div
       class='mt-20 text-[--clr-white-01] text-center lg:text-left max-w-[--max-width-content] mx-auto flex-grow'
@@ -31,15 +36,25 @@ import { Image } from 'astro:assets';
           variant={'leaf'}
           size={'leafLg'}
           className='w-fit font-gothamLight'
+          asChild
         >
-          Explore Garden 🡒
+          <a
+            href='/shop'
+            class='bg-[--clr-green-01] text-[--clr-white-01] rounded-r-full rounded-bl-full font-bold uppercase hover:brightness-90 h-11 px-6 sm:h-16 sm:px-8 flex items-center'
+            >Explore Garden 🡒</a
+          >
         </Button>
         <Button
           variant={'leaf'}
           size={'leafLg'}
           className='w-fit font-gothamLight'
+          asChild
         >
-          Learn more 🡒
+          <a
+            href='/about'
+            class='bg-[--clr-green-01] text-[--clr-white-01] rounded-r-full rounded-bl-full font-bold uppercase hover:brightness-90 h-11 px-6 sm:h-16 sm:px-8 flex items-center'
+            >Learn more 🡒</a
+          >
         </Button>
       </div>
     </div>
