--- a/src/components/home/AboutSection.astro
+++ b/src/components/home/AboutSection.astro
@@ -38,8 +38,17 @@ import Dots from '../../assets/home/aboutDots.png';
         gaps in the local supply as well as conduct soil tests on farms so as to
         accurately determine the fertilizer needs specific to each farm.
       </p>
-      <Button variant={'leaf'} size={'leafLg'} className='mt-6'>
-        Learn more
+      <Button
+        variant={'leaf'}
+        size={'leafLg'}
+        className='w-fit font-gothamLight'
+        asChild
+      >
+        <a
+          href='/about'
+          class='bg-[--clr-green-01] text-[--clr-white-01] rounded-r-full rounded-bl-full font-bold uppercase hover:brightness-90 h-11 px-6 sm:h-16 sm:px-8 flex items-center mt-6 w-fit'
+          >Learn more</a
+        >
       </Button>
     </div>
   </div>
