--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -46,20 +46,24 @@ const baseUrlCheck = String(Astro.url).split('/').at(-1) === 'blog';
       <Sidebar />
       <ul class='mx-auto md:order-1 mt-10 lg:mt-0'>
         {
-          page.data.map((article: Article) => (
+          page.data.map((article: Article, idx: number) => (
             <li>
-              <Image src={article.data.image} alt={article.data.imageAlt} />
+              <Image
+                src={article.data.image}
+                alt={article.data.imageAlt}
+                loading={idx === 0 ? 'eager' : 'lazy'}
+              />
               <div class='flex gap-2 mt-6 mb-4 text-[--clr-font] font-montserrat font-medium text-sm text-[0.938rem] flex-wrap'>
                 <div class='flex items-center justify-center gap-2'>
-                  <img src={DateIcon.src} alt='' />
+                  <Image src={DateIcon} alt='' />
                   <p>{article.data.date}</p>
                 </div>
                 <div class='flex items-center justify-center gap-2'>
-                  <img src={AuthorIcon.src} alt='' />
+                  <Image src={AuthorIcon} alt='' />
                   <p>{article.data.author}</p>
                 </div>
                 <div class='flex items-center justify-center gap-2'>
-                  <img src={CommentIcon.src} alt='' />
+                  <Image src={CommentIcon} alt='' />
                   <p>No comments</p>
                 </div>
               </div>
@@ -69,7 +73,11 @@ const baseUrlCheck = String(Astro.url).split('/').at(-1) === 'blog';
               <p class='font-montserrat text-sm text-[--clr-font] leading-loose my-4'>
                 {article.body}
               </p>
-              <a href={!baseUrlCheck ? `${article.slug}` : `blog/${article.slug}`}>
+              <a
+                href={
+                  !baseUrlCheck ? `${article.slug}` : `blog/${article.slug}`
+                }
+              >
                 <Button
                   variant={'leaf'}
                   size={'leafLg'}
