--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -3,6 +3,7 @@ import '@/styles/globals.css';
 import ContactHeader from '../components/home/ContactHeader.astro';
 import Navbar from '../components/home/Navbar';
 import Footer from '../components/home/Footer.astro';
+import { ViewTransitions } from 'astro:transitions';
 
 function capitalizeLetter(string: string) {
   return string.charAt(0).toUpperCase() + string.slice(1);
@@ -18,6 +19,7 @@ const currentUrl = capitalizeLetter(String(Astro.url.pathname).split('/')[1]);
     <meta name='viewport' content='width=device-width' />
     <meta name='generator' content={Astro.generator} />
     <title>OmniFert {currentUrl ? `- ${currentUrl}` : ''}</title>
+    <ViewTransitions />
   </head>
   <body class='relative overflow-x-hidden'>
     <header class='bg-[--clr-green-01] fixed w-full top-0 z-50'>
