--- a/src/layouts/ProductLayout.astro
+++ b/src/layouts/ProductLayout.astro
@@ -3,6 +3,7 @@ import '@/styles/globals.css';
 import ContactHeader from '../components/home/ContactHeader.astro';
 import Navbar from '../components/home/Navbar';
 import Footer from '../components/home/Footer.astro';
+import { ViewTransitions } from 'astro:transitions';
 
 const { pageTitle } = Astro.props;
 ---
@@ -14,6 +15,7 @@ const { pageTitle } = Astro.props;
     <meta name='viewport' content='width=device-width' />
     <meta name='generator' content={Astro.generator} />
     <title>OmniFert - {pageTitle}</title>
+    <ViewTransitions />
   </head>
   <body class='relative'>
     <header class='bg-[--clr-green-01] fixed w-full top-0 z-50'>
