--- a/src/components/blog/Sidebar.astro
+++ b/src/components/blog/Sidebar.astro
@@ -34,6 +34,7 @@ const baseUrlCheck = String(Astro.url).split('/').at(-1) === 'blog';
                   alt={article.data.imageAlt}
                   class='h-[70px] w-[70px] object-cover'
                   loading={'eager'}
+                  transition:name={`${article.data.title} image`}
                 />
               </div>
               <div class='flex flex-col justify-between'>
