--- a/src/pages/blog/posts/[slug].astro
+++ b/src/pages/blog/posts/[slug].astro
@@ -33,6 +33,7 @@ const { title, date, author, image, alt, body } = Astro.props;
       src={image}
       alt={alt}
       class={'w-full md:max-w-[--max-width-article]'}
+      transition:name={`${title} image`}
     />
     <div class='px-4 max-w-[--max-width-article] mx-auto'>
       <h1
